# UltimateBotWConverter

./: .gitignore  .gitmodules  MANIFEST.in  README.md  RepackBars.py  bars.py  bars_converter.py  bars_convertor.py  bars_extractor.py  bcf_converter.py  bcfconverter.py  bfstpfixer.py  convert.bat  convert.sh  converter.py  requirements.txt  setup.cfg  setup.py
bflim_convertor/: bflim_extract.py  bntx.py  bntx_dds_injector.py  dds.py  formConv.py
ubotw_converter/: convert.bat  convert_single_thread.bat  converter.py  log.conf
ubotw_converter/bars_py/: README.md  bcf_converter.py  utils.py
ubotw_converter/bflim_convertor/: bflim_extract.py  binary_reader.py  bntx.py  bntx_dds_injector.py  dds.py  globals.py
ubotw_converter/pythonnet/pythonnet/runtime/: Python.Runtime.deps.json
