[metadata]
name = UBOTW-Converter
version = 1.4.0a1
author = Nitram
description = A script to convert WiiU BotW mods to Switch
license = GNU General Public License v3.0
license_files = file: LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nitr4m12/UltimateBotWConverter
project_urls = 
    Bug Tracker = https://github.com/Nitr4m12/UltimateBotWConverter/issues
classifiers = 
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.7<3.9
install_requires = 
	bcml>=3.7.2
	pythonnet>=2.5.2

[options.entry_points]
console_scripts = 
    convert_to_switch = ubotw_converter.converter:main

[options.package_data]
ubotw_converter = dotnet_libs/*.dll
